--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 </div>
 
 <script>
+const state = { exchange:'upbit', symbol:'KRW-SHIB' };
+  
 ;(()=>{
   // 서버 표시(자동)
   try{ document.getElementById('server-text').textContent = location.origin; }catch(_){}
