--- a/index.html
+++ b/index.html
@@ -1,208 +1,244 @@
 <script>
-  // …(기존 코드들)…
+  // ================= 공통 유틸 =================
+  const REFRESH_MS = 5000; // 5초 권장
+  let symbolsKo = null;
 
-  // 숫자 → "+12.34%" 같은 문자열
+  async function loadSymbolsKo() {
+    if (symbolsKo) return symbolsKo;
+    try {
+      const r =
+        await fetch('/symbols_ko.json').catch(() => null) ||
+        await fetch('https://satoshi-wallet-2025.vercel.app/symbols_ko.json').catch(() => null);
+      if (r && r.ok) symbolsKo = await r.json();
+      else symbolsKo = {};
+    } catch (_) { symbolsKo = {}; }
+    return symbolsKo;
+  }
+
   function fmtPct(n) {
     if (!isFinite(n)) return '-';
     const sign = n > 0 ? '+' : (n < 0 ? '' : '');
     return sign + n.toFixed(2) + '%';
   }
-
-  // 원화 콤마 표기
   function fmtKRW(x) {
     if (!isFinite(x)) return '-';
     return Number(x).toLocaleString('ko-KR');
   }
+  function setNowText(elId) {
+    const el = document.getElementById(elId);
+    if (!el) return;
+    const now = new Date();
+    const hh = String(now.getHours()).padStart(2,'0');
+    const mm = String(now.getMinutes()).padStart(2,'0');
+    const ss = String(now.getSeconds()).padStart(2,'0');
+    el.textContent = `${hh}:${mm}:${ss}`;
+  }
 
-  // 빗썸 상위 리스트 갱신
-  async function loadBithumbTop() {
+  // 업비트 호가규칙(원화) 반올림
+  function upbitTick(price) {
+    if (price >= 2000000) return 1000;
+    if (price >= 1000000) return 500;
+    if (price >= 500000)  return 100;
+    if (price >= 100000)  return 50;
+    if (price >= 10000)   return 10;
+    if (price >= 1000)    return 1;
+    if (price >= 100)     return 0.1;
+    if (price >= 10)      return 0.01;
+    return 0.001;
+  }
+  function roundToTick(price) {
+    const t = upbitTick(price);
+    return Math.round(price / t) * t;
+  }
+
+  // ================= 실시간 급등 (업비트) =================
+  async function loadUpbitTop() {
     try {
-      const resp = await fetch('/api/bithumb');
-      const json = await resp.json();
-
-      const box = document.getElementById('bithumb-top-box');   // 빗썸 리스트가 들어가는 UL/BOX 요소 id
-      const time = document.getElementById('bithumb-top-time'); // 우측 상단 시각 표시 요소 id
+      const r = await fetch('/api/upbit');  // 기존 엔드포인트 유지
+      const j = await r.json();
+      const box = document.getElementById('upbit-top-box');
       if (!box) return;
-
       box.innerHTML = '';
-      if (!json.ok || !json.items || json.items.length === 0) {
+      if (!j.ok || !j.items?.length) {
         box.innerHTML = '<li>-</li>';
       } else {
-        json.items.forEach((it) => {
-          // ratePercent가 없으면 rate 사용 (둘 다 안전)
-          const pct = (isFinite(it.ratePercent) ? it.ratePercent : it.rate);
-          const name = it.name || it.symbol;
-          const line = document.createElement('li');
-          line.className = 'row';
-          line.innerHTML =
+        j.items.forEach(it => {
+          const pct = isFinite(it.ratePercent) ? it.ratePercent : it.rate;
+          const name = it.name || it.korean_name || it.symbol || '-';
+          const li = document.createElement('li');
+          li.className = 'row';
+          li.innerHTML =
             `<span class="name">${name}</span>` +
-            `<span class="value ${pct >= 0 ? 'up' : 'down'}">${fmtPct(pct)}</span>`;
-          box.appendChild(line);
+            `<span class="value ${pct>=0?'up':'down'}">${fmtPct(pct)}</span>`;
+          box.appendChild(li);
         });
       }
+      setNowText('upbit-top-time');
+    } catch (_) {
+      const box = document.getElementById('upbit-top-box');
+      if (box) box.innerHTML = '<li>-</li>';
+    }
+  }
 
-      if (time) {
-        const now = new Date();
-        const hh = now.getHours().toString().padStart(2, '0');
-        const mm = now.getMinutes().toString().padStart(2, '0');
-        const ss = now.getSeconds().toString().padStart(2, '0');
-        time.textContent = `${hh}:${mm}:${ss}`;
+  // ================= 실시간 급등 (빗썸) — undefined% 해결 =================
+  async function loadBithumbTop() {
+    try {
+      const r = await fetch('/api/bithumb');
+      const j = await r.json();
+      const box = document.getElementById('bithumb-top-box');
+      if (!box) return;
+      box.innerHTML = '';
+      if (!j.ok || !j.items?.length) {
+        box.innerHTML = '<li>-</li>';
+      } else {
+        j.items.forEach(it => {
+          const pct = isFinite(it.ratePercent) ? it.ratePercent : it.rate;
+          const name = it.name || it.symbol || '-';
+          const li = document.createElement('li');
+          li.className = 'row';
+          li.innerHTML =
+            `<span class="name">${name}</span>` +
+            `<span class="value ${pct>=0?'up':'down'}">${fmtPct(pct)}</span>`;
+          box.appendChild(li);
+        });
       }
-    } catch (e) {
-      // 실패해도 UI 안깨지게
+      setNowText('bithumb-top-time');
+    } catch (_) {
       const box = document.getElementById('bithumb-top-box');
       if (box) box.innerHTML = '<li>-</li>';
     }
   }
 
-  // 일정 간격 자동 갱신 (예: 10초)
-  setInterval(loadBithumbTop, 10000);
+  // ================= 검색: 한글/영문/심볼 통합 =================
+  async function resolveQuery(q, exchangeTab) {
+    const map = await loadSymbolsKo();
+    const raw = (q||'').trim();
+    if (!raw) return null;
+    const upper = raw.toUpperCase();
+
+    // KRW-XXX 형태면 업비트 우선
+    if (upper.startsWith('KRW-')) {
+      return { exchange: 'UPBIT', upbitMarket: upper, symbol: upper.replace('KRW-','') };
+    }
+    // 심볼 그대로 입력 (BTC, ETH …)
+    if (/^[A-Z0-9]+$/.test(upper)) {
+      return {
+        exchange: exchangeTab==='BITHUMB' ? 'BITHUMB' : 'UPBIT',
+        upbitMarket: `KRW-${upper}`,
+        symbol: upper
+      };
+    }
+    // 한글명으로 입력한 경우 매핑 역검색
+    for (const [k, v] of Object.entries(map)) {
+      if (typeof v === 'string' && v.replace(/\s+/g,'') === raw.replace(/\s+/g,'')) {
+        const sym = k.replace(/^KRW[-_]/,'').toUpperCase();
+        return {
+          exchange: exchangeTab==='BITHUMB' ? 'BITHUMB' : 'UPBIT',
+          upbitMarket: `KRW-${sym}`,
+          symbol: sym
+        };
+      }
+    }
+    // 기본값: 업비트 시도
+    return { exchange: 'UPBIT', upbitMarket: `KRW-${upper}`, symbol: upper };
+  }
+
+  // ================= 시세 가져오기 (업비트/빗썸 자동) =================
+  async function fetchQuote(resolved) {
+    if (!resolved) return null;
+    if (resolved.exchange === 'UPBIT') {
+      const url = `https://api.upbit.com/v1/ticker?markets=${encodeURIComponent(resolved.upbitMarket)}`;
+      const r = await fetch(url);
+      const j = await r.json();
+      if (!Array.isArray(j) || !j.length) return null;
+      const t = j[0];
+      return {
+        exchange: 'UPBIT',
+        price: Number(t.trade_price),
+        changeRate: Number(t.signed_change_rate) * 100, // %
+      };
+    } else { // BITHUMB
+      const url = `https://api.bithumb.com/public/ticker/${resolved.symbol}_KRW`;
+      const r = await fetch(url);
+      const j = await r.json();
+      if (!j || j.status!=='0000' || !j.data) return null;
+      return {
+        exchange: 'BITHUMB',
+        price: Number(j.data.closing_price),
+        changeRate: Number(j.data.fluctate_rate_24H), // %
+      };
+    }
+  }
+
+  // ================= 레벨 계산 (매수/매도/손절/위험도) =================
+  function calcLevels(price, changeRate) {
+    if (!isFinite(price)) return null;
+
+    // 기본 프리셋(안전형): B1 -1.5%, B2 -3%, S1 +1.5%, S2 +3%, SL -3.5%
+    const buy1  = roundToTick(price * 0.985);
+    const buy2  = roundToTick(price * 0.970);
+    const sell1 = roundToTick(price * 1.015);
+    const sell2 = roundToTick(price * 1.030);
+    const stop  = roundToTick(price * 0.965);
+
+    // 위험도(1~5): 24H 변동률 기준
+    const ar = Math.abs(changeRate || 0);
+    let risk = 3;
+    if (ar < 2) risk = 1;
+    else if (ar < 4) risk = 2;
+    else if (ar < 8) risk = 3;
+    else if (ar < 12) risk = 4;
+    else risk = 5;
+
+    // 시장 상태/상·하락 기대 (간단 룰)
+    const state = changeRate > 0 ? '상승' : (changeRate < 0 ? '하락' : '중립');
+    const upExp = changeRate > 0 ? '상승 지속 유력' : '기술적 반등 구간';
+    const dnExp = changeRate < 0 ? '하락 지속 유의' : '당일 조정 가능';
+
+    return { buy1, buy2, sell1, sell2, stop, risk, state, upExp, dnExp };
+  }
+
+  function fillCells(base, res) {
+    const set = (id, v) => { const el = document.getElementById(id); if (el) el.textContent = v; };
+
+    set('cell-base',   fmtKRW(base.price));
+    set('cell-state',  res.state);
+    set('cell-risk',   String(res.risk));
+    set('cell-up',     res.upExp);
+    set('cell-down',   res.dnExp);
+    set('cell-buy1',   fmtKRW(res.buy1));
+    set('cell-buy2',   fmtKRW(res.buy2));
+    set('cell-sell1',  fmtKRW(res.sell1));
+    set('cell-sell2',  fmtKRW(res.sell2));
+    set('cell-stop',   fmtKRW(res.stop));
+  }
+
+  // ================= 검색 버튼 동작 =================
+  async function onSearch() {
+    try {
+      const qEl = document.getElementById('search-input');    // 검색 입력창 id
+      const isBithumb = document.getElementById('tab-bithumb')?.classList.contains('active');
+      const q = qEl ? qEl.value : '';
+      const resolved = await resolveQuery(q, isBithumb ? 'BITHUMB' : 'UPBIT');
+      const quote = await fetchQuote(resolved);
+      if (!quote) return;
+
+      const lv = calcLevels(quote.price, quote.changeRate);
+      fillCells(quote, lv);
+    } catch (e) {
+      // 무시(화면 유지)
+    }
+  }
+
+  // 검색 버튼 연결 (페이지에 따라 버튼 id 확인)
   document.addEventListener('DOMContentLoaded', () => {
+    const btn = document.getElementById('search-btn'); // 검색 버튼 id
+    if (btn) btn.addEventListener('click', onSearch);
+
+    // 초기 로드 & 주기 갱신
+    loadUpbitTop();
     loadBithumbTop();
+    setInterval(loadUpbitTop, REFRESH_MS);
+    setInterval(loadBithumbTop, REFRESH_MS);
   });
-
-  // …(기존 코드들)…
-</script>
-
-
-/** ============ 이벤트 바인딩 ============ */
-window.addEventListener('DOMContentLoaded', () => {
-  // 토글 버튼 (업비트/빗썸) - 기존 버튼에 id만 달아서 연결해도 됨
-  $('#btn-upbit')?.addEventListener('click',()=>setExchange('upbit'));
-  $('#btn-bithumb')?.addEventListener('click',()=>setExchange('bithumb'));
-
-  // 검색 입력 디바운스
-  const input = $('#search-input');
-  if (input) input.addEventListener('input', debounce(handleSearch, 350));
-
-  loadKoMap().then(()=>{
-    renderTopGainers();
-  });
-});
-
-/** ============ 검색/호가 ============ */
-async function handleSearch() {
-  const kw = ($('#search-input')?.value || '').trim();
-  if (!kw) return;
-
-  // 검색 → 호가 조회
-  // - 업비트: KRW-시바이누 형식 필요
-  // - 빗썸: 심볼(MIX 등) 필요
-  let symbolForBook;
-  if (currentExchange === 'upbit') {
-    // 예: "시바이누" 입력 → 업비트 마켓 심볼 매칭(간단 매핑/패턴)
-    // 실제로는 REST /market/all 조회해 엄정 매칭 권장
-    const guess = 'KRW-' + kw.replace(/\s/g,'').toUpperCase();
-    symbolForBook = guess;
-    await renderOrderbookUpbit(symbolForBook);
-  } else {
-    const guess = kw.replace(/\s/g,'').toUpperCase();
-    symbolForBook = guess;
-    await renderOrderbookBithumb(symbolForBook);
-  }
-}
-
-async function renderOrderbookUpbit(market) {
-  try {
-    // CORS가 막히면 serverless 프록시로 바꾸세요 (api/upbit.js 프록시 파일 추가)
-    const r = await fetch(`https://api.upbit.com/v1/orderbook?markets=${encodeURIComponent(market)}`);
-    const j = await r.json();
-    const ob = j?.[0];
-    if (!ob || !ob.orderbook_units) throw new Error('no upbit orderbook');
-
-    const asks = ob.orderbook_units.map(u=>({ price:u.ask_price, qty:u.ask_size }));
-    const bids = ob.orderbook_units.map(u=>({ price:u.bid_price, qty:u.bid_size }));
-
-    paintOrderbook(asks, bids); // 공통 페인터
-  } catch(e){
-    console.error(e);
-    paintOrderbook([],[]);
-  }
-}
-
-async function renderOrderbookBithumb(symbol) {
-  try {
-    // 프록시: /api/bithumb?path=orderbook&symbol=MIX
-    const r = await fetch(`/api/bithumb?path=orderbook&symbol=${encodeURIComponent(symbol)}`);
-    const j = await r.json();
-    if (!j.asks || !j.bids) throw new Error('no bithumb orderbook');
-    // 이미 표준화 되어 반환
-    paintOrderbook(j.asks, j.bids);
-  } catch(e){
-    console.error(e);
-    paintOrderbook([],[]);
-  }
-}
-
-function paintOrderbook(asks=[], bids=[]) {
-  // 매도1/매도2/매수1/매수2 같은 필드 채우기 (예시는 id를 가정)
-  const ask1 = asks[0]?.price ?? 0;
-  const ask2 = asks[1]?.price ?? 0;
-  const bid1 = bids[0]?.price ?? 0;
-  const bid2 = bids[1]?.price ?? 0;
-
-  $('#ask1') && ($('#ask1').textContent = fmt(ask1));
-  $('#ask2') && ($('#ask2').textContent = fmt(ask2));
-  $('#bid1') && ($('#bid1').textContent = fmt(bid1));
-  $('#bid2') && ($('#bid2').textContent = fmt(bid2));
-}
-
-function fmt(v) {
-  if (!v) return '-';
-  return Number(v).toLocaleString('ko-KR', { maximumFractionDigits: 6 });
-}
-
-/** ============ 실시간 급등(좌:업비트 / 우:빗썸) ============ */
-async function renderTopGainers() {
-  await loadKoMap();
-
-  // 업비트 박스
-  renderGainersUpbit();
-
-  // 빗썸 박스 (한글 노출)
-  renderGainersBithumb();
-}
-
-async function renderGainersUpbit() {
-  // 기존 구현이 있으면 그대로 쓰고, 이름만 매핑해도 됩니다.
-  // 여기서는 예시로 고정 목록을 사용 (실제는 24h 변동률 기반으로 교체 가능)
-  const box = $('#box-upbit');
-  if (!box) return;
-  const list = [
-    { symbol: 'KRW-EMC2', chg: 10.88 },
-    { symbol: 'KRW-QUANT', chg: 10.38 },
-    { symbol: 'KRW-BTC', chg: 5.30 },
-    { symbol: 'KRW-VET', chg: 4.80 },
-    { symbol: 'KRW-TON', chg: 4.57 },
-    { symbol: 'KRW-STX', chg: 3.35 },
-    { symbol: 'KRW-MNT', chg: 3.33 },
-    { symbol: 'KRW-NEO', chg: 2.94 }
-  ];
-  box.innerHTML = list.map(it => `
-    <div class="row">
-      <span class="name">${koNameFor(it.symbol)}</span>
-      <span class="chg">${it.chg > 0 ? '+' : ''}${it.chg.toFixed(2)}%</span>
-    </div>
-  `).join('');
-}
-
-async function renderGainersBithumb() {
-  const box = $('#box-bithumb');
-  if (!box) return;
-  try {
-    const r = await fetch('/api/bithumb?path=top-gainers');
-    const j = await r.json();
-    const items = j.items || [];
-
-    box.innerHTML = items.map(it => `
-      <div class="row">
-        <span class="name">${koNameFor(it.symbol)}</span>
-        <span class="chg">${it.chg > 0 ? '+' : ''}${it.chg.toFixed(2)}%</span>
-      </div>
-    `).join('');
-  } catch(e){
-    console.error(e);
-    box.innerHTML = '<div class="muted">급등 데이터를 불러오지 못했습니다.</div>';
-  }
-}
 </script>
